Squashed 'DbGuardian/foreign_data_wrappers/oracle_fdw/' changes from 9db035f..ba18d86
ba18d86 Bind BINARY_FLOAT/BINARY_DOUBLE parameters as strings
db78a2e Adapt to PostgreSQL commit d8c3106bb6
3ca26bb Fix parameter conversion for numbers in scientific notation
c357af3 Fix license wording
2e95b58 Update Cybertec company name
fb9d57f Add kudos to CHANGELOG
93e4f01 Use more consistent integer data types
6fe628d Initialize all OCIStmt* to NULL
7e60975 Enforce a limit of 1000 for "prefetch"
7c65f58 Add foreign server option "set_timezone"
b4e2137 Reduce "prefetch" limit to 1000
72fdbdd Regression tests for "prefetch" and "lob_prefetch"
b82f507 Make auto_explain work with oracle_fdw
c368311 Set Oracle session time zone from "timezone"
57890ab Fix check for "lob_prefetch"
2ad79b0 Don't use bms_first_member()
d679a73 Use the array interface instead of OCI prefetching
e8a3317 Don't use the deprecated OCIStmtPrepare
65073da Add change log entry for 0ff11cbf8c
0ff11cb Don't free() strings in the environment
c424215 Fix a code comment
aaacc6b Fix regression tests for 09c6ccaa7c
9b447d3 Stabilize regression tests from cde9d10274
9d836a4 Fix BEFORE UPDATE triggers
8322452 Don't push down LIMIT with FOR SHARE or FOR UPDATE
f3e5862 Update version string
caa6b75 Fix inserting CLOBs with "nchar" on
916135a Adapt to PostgreSQL commit f193883fc9
3301831 Adapt to PostgreSQL commit a61b1f7482
72d7569 Fix a bug introduced with b926831356
dd5b720 Fix regression tests from cde9d10274
3217b90 Ignore transaction errors in read-only transactions
5099b5e Improve changelog entry
e61d62a Propagate read-only transactions to Oracle
7e67f04 Improve code comments for b926831356
b926831 Skip Oracle savepoints in read-only transactions

git-subtree-dir: DbGuardian/foreign_data_wrappers/oracle_fdw
git-subtree-split: ba18d86bd754f6675e0f5ac10e832c964b771d3f

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,47 @@
+Version 2.6.0
+
+  Bugfixes:
+  - Inserting CLOBs with the server option "nchar" on can lead to the error
+    "ORA-24806: LOB form mismatch".
+    Report and patch by "jopoly".
+  - Don't push down LIMIT with FOR SHARE or FOR UPDATE.  That caused the error
+    ORA-02014: cannot select FOR UPDATE from view with DISTINCT, GROUP BY, etc.
+    Reported by Marti Raudsepp.
+  - Fix BEFORE UPDATE triggers.
+    If a BEFORE UPDATE trigger modified a column that was not updated, the
+    changed column was not propagated to Oracle.
+    Report and diagnosis by "jopoly".
+  - Don't free() strings in the environment.
+    This could lead to crashes and unpredictable behavior.
+  - Conversions from TIMESTAMP WITH LOCAL TIME ZONE to "timestamp without time
+    zone" were incorrect.  To fix, set the Oracle session time zone from the
+    PostgreSQL parameter "timezone".  Since not all time zones are accepted by
+    all Oracle servers, this must be explicitly enabled by setting the
+    "set_timezone" option on the foreign server.
+    Thanks to Sébastien Caunes for help with this.
+  - Make auto_explain work with oracle_fdw.  This used to cause an error:
+    oracleQueryPlan internal error: statement handle is not NULL
+    Report by "Jaisus" and Sébastien Caunes.  Sébastien provided the essential
+    clue that the problem is related to auto_explain.
+  - Fix "OCI-22061: invalid format text" errors when inserting some numbers
+    with scientific notation into a foreign table.
+    Report and analysis by "liubeck".
+
+  Enhancements:
+  - Skip Oracle savepoint management if the foreign server option
+    "isolation_level" is set to "read_only" or if we are inside a read-only
+    PostgreSQL transaction.  This saves some round trips and avoids Oracle
+    errors that might be thrown when entering a PL/pgSQL exception handler.
+    Per suggestion from "math-g".
+  - Use explicit bulk fetching into arrays rather than OCI prefetching for
+    Oracle SELECT statements.  This greatly improves performance for LOB
+    and LONG columns, since OCI prefetching didn't work if these data types.
+    The limitation still applies for SDO_GEOMETRY columns.  A new option
+    "lob_prefetch" is used to configure how much of the LOBs is fetched
+    with the rows to reduce the number of round trips.  This enhancement
+    was generously sponsored by Mipih (https://www.mipih.fr/).
+    Thanks for Philippe Florent for help and testing!
+
 Version 2.5.0, released 2022-10-28
 
   Bugfixes:
@@ -30,7 +74,7 @@ Version 2.4.0, released 2021-09-24
     introduced in 2.3.0.
     We don't want that by default, since it causes a noticable performance
     hit and makes UPDATEs with long strings fail with ORA-01461.
-    Problem reports by "threenotrump", "CHunter" and Phil Florent.
+    Problem reports by "threenotrump", "CHunter" and Philippe Florent.
   - Push down LIMIT clauses if possible.
     These are pushed down as FETCH FIRST n ROWS ONLY from Oracle 12.2 on.
     Based on a patch by Gilles Darold, per request from Ilia Sazonov.
@@ -38,7 +82,7 @@ Version 2.4.0, released 2021-09-24
   Bugfixes:
   - Fix a performance regression introduced in 2.3.0 by the fix for NCHAR
     and NVARCHAR2 columns.
-    Reported by Phil Florent.
+    Reported by Philippe Florent.
   - Fix a crash with type coerced array parameters.
     This can make queries fail with a WHERE condition like
        WHERE varcharcol = ANY ($1);
