--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,22 @@
-Version 2.6.0
+Version 2.7.0
+
+  Bugfixes:
+  - Don't push down LIMIT without an ORDER BY clause.
+    This can lead to wrong results in some cases.
+    Report by "fbattke".
+  - Fix support for query parameters of type "uuid".
+    This led to errors like
+       error executing query: OCINumberFromText failed to convert parameter
+       OCI-22062: invalid input string [8feee298-7ce5-4761-9487-34cab831fead]
+    Report by "victorras".
+
+Version 2.6.0, released 2023-09-08
+
+  Note: This release will fail to build with minor releases below 13.10,
+        14.7 and 15.2.  Other major versions are not affected.  oracle_fdw
+        binaries built with later minor releases won't load with older
+        PostgreSQL binaries, complaining about undefined symbols.
+        Keep the PostgreSQL server updated!
 
   Bugfixes:
   - Inserting CLOBs with the server option "nchar" on can lead to the error
@@ -26,6 +44,11 @@ Version 2.6.0
   - Fix "OCI-22061: invalid format text" errors when inserting some numbers
     with scientific notation into a foreign table.
     Report and analysis by "liubeck".
+  - Support whole-row references in RETURNING clauses.
+    Report and patch by Nguyen Ngoc Son.
+  - Make generated columns work correctly.
+    This will fail to build with minor releases below 13.10, 14.7 and 15.2!
+    Report and original patch by Nguyen Ngoc Son.
 
   Enhancements:
   - Skip Oracle savepoint management if the foreign server option
